--- a/.env
+++ b/.env
@@ -1,7 +1,12 @@
-DB_HOST=mongodb_dialysing
+DB_HOST=localhost
 DB_PORT=27017
 DB_NAME=dialysing
 APP_PORT=6000
 PASSWORD_HASH_KEY=DialysingPasswordHashKey**?HashKey++?
 ACCESS_TOKEN_SECRET_KEY=DialysingPasswordHashKey**?ACCESS_TOKEN_SECRET_KEY++?
 REFRESH_TOKEN_SECRET_KEY=DialysingPasswordHashKey**?REFRESH_TOKEN_SECRET_KEY++?
+SESSION_SECRET=dialtingSession_SecretKey3215444++
+
+MAIL_VERIFY_URL = http://localhost:6000/
+GMAIL_USER = baynarkozcuu@gmail.com
+GMAIL_PASSWORD = EnesOzudogru.34#
