template yenilendi (clinic/auth/user)

--- a/.env
+++ b/.env
@@ -6,7 +6,8 @@ PASSWORD_HASH_KEY=DialysingPasswordHashKey**?HashKey++?
 ACCESS_TOKEN_SECRET_KEY=DialysingPasswordHashKey**?ACCESS_TOKEN_SECRET_KEY++?
 REFRESH_TOKEN_SECRET_KEY=DialysingPasswordHashKey**?REFRESH_TOKEN_SECRET_KEY++?
 SESSION_SECRET=dialtingSession_SecretKey3215444++
+CONFIRM_SECRET=DialysingPasswordHashKey**?HashKey++?
 
-MAIL_VERIFY_URL = http://localhost:6000/
-GMAIL_USER = baynarkozcuu@gmail.com
-GMAIL_PASSWORD = EnesOzudogru.34#
+MAIL_VERIFY_URL = http://localhost:3030/
+GMAIL_USER = netasinacak@gmail.com
+GMAIL_PASSWORD = synuclemhwezjfok
