--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "http-status": "^1.5.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mongo-xlsx": "^1.0.12",
     "mongoose": "^6.2.3",
+    "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0"
