--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
+    "convert-excel-to-json": "^1.7.0",
     "cookie-parser": "^1.4.6",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
@@ -24,7 +25,6 @@
     "http-status": "^1.5.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongo-xlsx": "^1.0.12",
     "mongoose": "^6.2.3",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
