--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-ejs-layouts": "^2.5.1",
+    "express-router-group": "^0.1.4",
     "express-session": "^1.17.2",
     "helmet": "^5.0.2",
     "http-status": "^1.5.0",
