--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ngneat/falso": "^4.0.0",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
     "convert-excel-to-json": "^1.7.0",
