errors modeli eklendi

--- a/.env
+++ b/.env
@@ -8,6 +8,6 @@ REFRESH_TOKEN_SECRET_KEY=DialysingPasswordHashKey**?REFRESH_TOKEN_SECRET_KEY++?
 SESSION_SECRET=dialtingSession_SecretKey3215444++
 CONFIRM_SECRET=DialysingPasswordHashKey**?HashKey++?
 
-MAIL_VERIFY_URL = http://localhost:3030/
+MAIL_VERIFY_URL = http://95.217.184.199:3030/
 GMAIL_USER = netasinacak@gmail.com
 GMAIL_PASSWORD = synuclemhwezjfok
