--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@ngneat/falso": "^4.0.0",
+    "axios": "^0.27.2",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
     "convert-excel-to-json": "^1.7.0",
@@ -30,6 +31,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
     "multer": "^1.4.4",
+    "node-libcurl": "^2.3.4",
     "nodemailer": "^6.7.2",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0"
